# upstageailab-ocr-recsys-competition-recsys-5

./: .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
docs/: competition-info.md  how-to-use-uv.md
notebooks/: notebook_template.ipynb
notebooks/korea202/: SequentialRecommendationEx1.ipynb  exam_sr01.ipynb  exam_sr02.ipynb  exam_sr03.ipynb  exam_sr04.ipynb  recsys_bert4rec_after.py  recsys_bert4rec_before.py  recsys_bert4rec_inference.py  recsys_bert4rec_train.py  recsys_bpr_after.py  recsys_rerank_after.py  test.ipynb
notebooks/korea202/sample/: SequentialRecommendationEx2.ipynb  exam_als.ipynb  exam_sasrec.ipynb
