[project]
name = "upstageailab-ocr-recsys-competition-recsys-5"
version = "0.1.0"
description = "Recommender System"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "pre-commit>=4.3.0",
    "ruff>=0.13.1",
]


[tool.hatch.build.targets.wheel]
packages = ["src/awesome-rec-sys"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
